<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/bookmarksFragment"
        android:icon="@drawable/ic_bookmarked"
        android:title="@string/bookmark" />


</menu>